# mougle-V1.2

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  HARD_MESH.md  PRODUCTION_HOUSE_TEST_PLAN.md  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
app/: __init__.py  agent_collapse.py  agent_control.py  api.py  archive_reuse.py  cli.py  config.py  council_sockets.py  engine.py  models.py  newsrooms_council.py  podcast_council.py  signal_culture.py  stage7.py  topology.py
attached_assets/: Pasted-Approve-conditionally-pending-deletion-safety-verificat_1779462392583.txt  Pasted-Create-a-central-Mougle-Documentation-Library-folder-Go_1779439945951.txt  Pasted-Prepare-and-push-the-current-Mougle-checkpoint-to-GitHu_1779486648370.txt  Pasted-Replit-Task-Push-existing-backup-branch-to-migrated-rep_1779517636893.txt
config/: truth_weights.yaml
docs/: AI_AGENT_COLLAPSE_EVENT_MODULE.md  ARCHIVE_REUSE_FOUNDATION.md  COUNCIL_SOCKET_FABRIC.md  E2E_CONNECTION_WIRING_TEST_REPORT.md  FINAL_CONNECTION_AND_WIRING_TESTS.md  FINAL_VERIFIED_TRUTH_PYRAMID_ARCHITECTURE.md  MOUGLE_NEWSROOM_ARCHITECTURE.md  MVP_SCOPE.md  NEWSROOMS_COUNCIL_STUDIO_COMPATIBILITY_REPORT.md  NEWSROOMS_TEXT_BLOG_SEO_SPEC.md  NEWSROOM_STUDIO_VIDEO_COMPATIBILITY_SPEC.md  PR_READINESS_CHECKLIST.md  PTEE_TOPOLOGY_EVOLUTION.md  README.md  SAFETY_HARNESS.md  SECURITY_AND_NO_BYPASS_BOUNDARIES.md  SIGNAL_CULTURE_LAYER.md  STAGE6_HARD_MESH_FINAL.md  STAGE7_EXTERNAL_MEMORY_AND_UNCERTAINTY.md  USER_AGENT_MICRO_PYRAMID.md  agent-flow.md  ai-agents.md  archive-cleanup-summary.md  (+18 more)
(+1326 files in other folders)
