[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verified-truth-pyramid"
version = "0.1.0"
description = "Implementation-ready prototype for Verified Truth Pyramid and Modular Equation Architecture"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "networkx>=3.3",
  "scikit-learn>=1.5.0",
  "pyyaml>=6.0.1",
  "typer>=0.12.3"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.8.0"
]

[project.scripts]
verify-truth = "app.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*"]
